# Task-Manager

./: CMakeLists.txt  DisksInfo.cpp  GeneralRAMData.cpp  main.cpp  temp.cpp
Controller/: CPUController.cpp  CPUController.h  Controller.cpp  Controller.h  ControllerData.cpp  ControllerData.h  Cram.cpp  Cram.h  ICPUController.h  IControllerData.h  ICram.h
Model/: CPUModel.cpp  CPUModel.h  ICPUModel.h  IModelData.h  IMram.h  Model.cpp  Model.h  ModelData.cpp  ModelData.h  Mram.cpp  Mram.h
Perfect/: CMakeLists.txt
Perfect/include/: ControllerRAM.h  GeneralRAMParams.h  IParticularRAMParams.h  ParticularRAMParams.h
Perfect/src/: ControllerRAM.cpp  GeneralRAMParams.cpp  ParticularRAMParams.cpp  main.cpp
PerfectRAM/include/: ControllerRAM.h  GeneralRAMParams.h  IGeneralRAMParams.h  ParticularRAMParams.h
PerfectRAM/src/: GeneralRAMParams.cpp  ParticularRAMParams.cpp
TM/: CMakeLists.txt
TM/Controller/: CGeneralRAM.cpp  CGeneralRAM.h  ICGeneralRAM.h
TM/Model/: IMGeneralRAM.h  MGeneralRAM.cpp  MGeneralRAM.h
TM/Release/: ControllerRAM.cpp  ControllerRAM.h  main.cpp
TM/View/: IVGeneralRAM.h  VGeneralRAM.cpp  VGeneralRAM.h
Task-Manager_fix/: CMakeLists.txt  main.cpp
Task-Manager_fix/Controller/: CPUController.cpp  CPUController.h  Controller.cpp  Controller.h  ControllerAll.cpp  ControllerAll.h  Cram.cpp  Cram.h  ICPUController.h  IControllerAll.h  ICram.h
Task-Manager_fix/Model/: CPUModel.cpp  CPUModel.h  IModelAll.h  IMram.h  Model.cpp  Model.h  ModelAll.cpp  ModelAll.h  Mram.cpp  Mram.h
Task-Manager_fix/View/: CPUView.cpp  CPUView.h  ICPUView.h  IViewAll.h  IVram.h  View.cpp  View.h  ViewAll.cpp  ViewAll.h  Vram.cpp  Vram.h  mainwindow.cpp  mainwindow.h
Translated/: CMakeLists.txt
Translated/headers/: Controller.h  ControllerGRAM.h  ModelGRAM.h  ViewGRAM.h
Translated/interfaces/: IControllerGRAM.h  IModelGRAM.h  IViewGRAM.h
Translated/src/: Controller.cpp  Controller.h  ControllerGRAM.cpp  ControllerGeneralRAM.cpp  ControllerGeneralRAM.h  IControllerGeneralRAM.h  IModelGeneralRAM.h  IViewGeneralRAM.h  ModelGRAM.cpp  ModelGeneralRAM.cpp  ModelGeneralRAM.h  ViewGRAM.cpp  ViewGeneralRAM.cpp  ViewGeneralRAM.h  main.cpp
View/: CPUView.cpp  CPUView.h  ICPUView.h  IViewData.h  IVram.h  MainWindow.cpp  MainWindow.h  View.cpp  View.h  ViewData.cpp  ViewData.h  Vram.cpp  Vram.h  mainwindow.cpp  mainwindow.h
include/: CP_lib.h  GeneralRAM.h  RAM.h
release/: TaskManager
src/: CP_lib.cpp  GeneralRAM.cpp  RAM.cpp  main.cpp
